Add support Folia 1.21+