@@ -2,12 +2,10 @@ package org.alvindimas05.lagassist;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
-import java.util.UUID;
+import java.util.*;
+import java.util.logging.Logger;
 
+import org.alvindimas05.lagassist.utils.ServerType;
 import org.alvindimas05.lagassist.utils.WorldMgr;
 import org.bukkit.Bukkit;
 import org.bukkit.Location;
@@ -24,11 +22,12 @@ import org.alvindimas05.lagassist.hoppers.SellHoppers;
 
 public class Data {
 
-	private static File dataf = new File(Main.p.getDataFolder(), "data.yml");
-	private static FileConfiguration data = new YamlConfiguration();
+	private static final File dataf = new File(Main.p.getDataFolder(), "data.yml");
+	private static final FileConfiguration data = new YamlConfiguration();
+	private static final Logger log = Bukkit.getLogger();
+	private static long last;
 
 	public static void Enabler() {
-
 		try {
 			if (!dataf.exists()) {
 				dataf.createNewFile();
@@ -37,13 +36,11 @@ public class Data {
 			data.load(dataf);
 		} catch (Exception e) {
 			e.printStackTrace();
-
 		}
 
 		if (!data.contains("version")) {
-
 			if (data.contains("hoppers")) {
-				for (String rawh : data.getConfigurationSection("hoppers").getKeys(false)) {
+				for (String rawh : Objects.requireNonNull(data.getConfigurationSection("hoppers")).getKeys(false)) {
 					String loc = "hoppers." + rawh;
 
 					List<String> values = data.getStringList(loc);
@@ -53,34 +50,38 @@ public class Data {
 			}
 
 			data.set("version", 1);
-
 			saveData();
-
 		}
-
 	}
 
-	private static long last;
-
 	private static void saveData() {
-
 		if (System.currentTimeMillis() - last < 3000) {
 			return;
 		}
 
 		last = System.currentTimeMillis();
 
-		Bukkit.getScheduler().runTaskAsynchronously(Main.p, () -> {
-			try {
-				data.save(dataf);
-			} catch (IOException e) {
-				e.printStackTrace();
-			}
-		});
+		if (ServerType.isFolia()) {
+			Bukkit.getGlobalRegionScheduler().execute(Main.p, () -> {
+				try {
+					data.save(dataf);
+				} catch (IOException e) {
+					e.printStackTrace();
+				}
+			});
+		} else {
+			Bukkit.getScheduler().runTaskAsynchronously(Main.p, () -> {
+				try {
+					data.save(dataf);
+				} catch (IOException e) {
+					e.printStackTrace();
+				}
+			});
+		}
 	}
 
 	private static short genMapId() {
-		MapView newe = Bukkit.createMap(Bukkit.getWorlds().get(0));
+		MapView newe = Bukkit.createMap(Bukkit.getWorlds().getFirst());
 		short mapid = (short) Reflection.getId(newe);
 		data.set("data.mapid", mapid);
 		saveData();
@@ -89,35 +90,25 @@ public class Data {
 
 	public static short getMapId() {
 		if (data.contains("data.mapid")) {
-			int mapid = data.getInt("data.mapid");
-//			if (Reflection.getMapView(mapid) == null) {
-//				return genMapId();
-//			} else {
-//				return mapid;
-//			}
-			return (short) mapid;
+			return (short) data.getInt("data.mapid");
 		} else {
 			return genMapId();
 		}
-
 	}
 
 	public static void deleteHopper(Hopper h) {
 		String cloc = "hoppers." + WorldMgr.serializeLocation(h.getLocation());
-
 		data.set(cloc, null);
 		saveData();
 	}
 
 	public static boolean isSellHopper(Location loc) {
 		String cloc = "hoppers." + WorldMgr.serializeLocation(loc);
-
 		return data.getBoolean(cloc + ".sellhopper", false);
 	}
 
 	public static boolean toggleSellHopper(Player p, Location loc) {
 		String cloc = "hoppers." + WorldMgr.serializeLocation(loc);
-
 		String owner = data.getString(cloc + ".owner", "NONE");
 
 		if (!(p.getUniqueId().toString().equals(owner) || p.hasPermission("lagassist.hopper.bypass"))) {
@@ -130,50 +121,38 @@ public class Data {
 		if (isSellHopper(loc)) {
 			data.set(cloc + ".sellhopper", false);
 			p.sendMessage(Main.PREFIX + "This sellhopper has been §2disabled§f at " + percentage + "§f.");
-			saveData();
-			return true;
 		} else {
 			data.set(cloc + ".sellhopper", true);
 			p.sendMessage(Main.PREFIX + "This sellhopper has been §aenabled§f at " + percentage + "§f.");
-			saveData();
-			return true;
 		}
+
+		saveData();
+		return true;
 	}
 
 	public static OfflinePlayer getOwningPlayer(Location loc) {
 		String cloc = "hoppers." + WorldMgr.serializeLocation(loc);
-
 		if (data.contains(cloc + ".owner")) {
 			return Bukkit.getOfflinePlayer(UUID.fromString(data.getString(cloc + ".owner")));
 		}
-
 		return null;
 	}
 
 	public static void setOwningPlayer(Location loc, OfflinePlayer owner) {
 		String cloc = "hoppers." + WorldMgr.serializeLocation(loc);
-
 		data.set(cloc + ".owner", owner.getUniqueId().toString());
 		saveData();
 	}
 
 	public static Set<Material> getFilterWhitelist(Location loc) {
 		String cloc = "hoppers." + WorldMgr.serializeLocation(loc);
+		List<String> found = data.contains(cloc + ".materials") ? data.getStringList(cloc + ".materials") : null;
+		Set<Material> allowed = new HashSet<>();
 
-		List<String> found = null;
-
-		if (data.contains(cloc + ".materials")) {
-			found = data.getStringList(cloc + ".materials");
-		}
-
-		Set<Material> allowed = new HashSet<Material>();
-
-		if (found == null) {
-			return allowed;
-		}
-
-		for (String stg : found) {
-			allowed.add(Material.getMaterial(stg));
+		if (found != null) {
+			for (String stg : found) {
+				allowed.add(Material.getMaterial(stg));
+			}
 		}
 
 		return allowed;
@@ -184,21 +163,17 @@ public class Data {
 
 		if (mats == null) {
 			data.set(cloc, null);
-			saveData();
-			return;
+		} else {
+			List<String> allowed = new ArrayList<>();
+			for (Material mat : mats) {
+				allowed.add(mat.name());
+			}
+			data.set(cloc, allowed);
 		}
 
-		List<String> allowed = new ArrayList<String>();
-
-		for (Material mat : mats) {
-			allowed.add(mat.name());
-		}
-
-		data.set(cloc, allowed);
 		saveData();
-
 	}
-	
+
 	public static void toggleAdvertising(CommandSender sender) {
 		boolean advertising = !data.getBoolean("disable-advertising", false);
 		data.set("disable-advertising", advertising);
